--- a/style/index.css
+++ b/style/index.css
@@ -118,6 +118,23 @@ fieldset {
   gap: var(--spacing-xs);
 }
 
+/* 공통 메인 메뉴 */
+.menu__list {
+  background: #ff0;
+  padding: var(--spacing-lg);
+}
+
+.menu__item {
+  border-bottom: 1px solid #121212;
+}
+
+.menu__link {
+  display: block;
+  padding: var(--spacing-xs) 0;
+  font-size: 1.15rem;
+  font-weight: 700;
+}
+
 /* 모바일 디바이스 */
 @media (min-width: 320px) and (max-width: 767px) {
   /* 모바일 헤더 */
@@ -197,10 +214,37 @@ fieldset {
     top: 50%;
     transform: translateY(-50%) rotate(-45deg);
   }
+
+  /* 모바일 메인 메뉴 */
+  .menu__list {
+    background: var(--yellow-opacity);
+    width: 70vw;
+    height: 100vw;
+    position: fixed;
+    top: 0;
+    left: 0;
+    backdrop-filter: blur(2px);
+    transform: translateX(-150%);
+    transition: all 600ms;
+  }
+
+  .is--active.menu__list {
+    transform: translateX(0);
+  }
 }
 
 /* 데스크탑 디바이스 */
 @media (min-width: 768px) {
+  /* 데스크탑 공통 */
+  .appHeader,
+  .menu__list,
+  .appMain,
+  .appFooter {
+    max-width: var(--container-width);
+    margin-left: auto;
+    margin-right: auto;
+  }
+
   /* 데스크탑 헤더 */
   .appHeader {
     display: grid;
@@ -224,13 +268,24 @@ fieldset {
     width: 25rem;
   }
 
-  .formInput__input {
-    border: 1px solid #aaa;
-    border-radius: 4px;
-  }
-
   /* 데스크탑 메인 메뉴 제어 버튼 */
   .buttonWrapper {
     display: none;
+  }
+  /* 데스크탑 메인 메뉴 */
+  .menu {
+    background: var(--secondary-color);
+    color: var(--white);
+  }
+  .menu__list {
+    background: transparent;
+    padding: 0;
+    display: flex;
+    flex-flow: row nowrap;
+    justify-content: space-between;
+  }
+  .menu__item {
+    border-bottom: 0;
+    padding: 0.5rem 0;
   }
 }
