--- a/style/index.css
+++ b/style/index.css
@@ -57,7 +57,7 @@ body {
   background: url(./../images/webcafe-logo.png) no-repeat 0 0 / 100%;
 }
 
-/* 공통 멤버서비스 */
+/* 공통 멤버 서비스 */
 .memberOnly {
   padding-left: 0;
   list-style: none;
@@ -133,6 +133,33 @@ fieldset {
   padding: var(--spacing-xs) 0;
   font-size: 1.15rem;
   font-weight: 700;
+}
+
+/* 공통 메인 콘텐츠 */
+
+.appMain section {
+  height: 250px;
+}
+
+.book {
+  background: yellow;
+  height: 500px !important;
+}
+
+.news {
+  background: pink;
+}
+
+.board {
+  background: skyblue;
+}
+
+.twitter {
+  background: lime;
+}
+
+.favorite {
+  background: salmon;
 }
 
 /* 모바일 디바이스 */
@@ -287,5 +314,32 @@ fieldset {
   .menu__item {
     border-bottom: 0;
     padding: 0.5rem 0;
+  }
+
+  /* 데스크탑 메인 콘텐츠 */
+  .appMain {
+    display: grid;
+    grid-template-columns: repeat(12 / 1fr);
+    /* grid-gap: var(--spacing-lg); */
+  }
+
+  .book {
+    grid-area: 2/1/7/6;
+  }
+
+  .news { 
+    grid-area: 1/1/2/13;
+  }
+
+  .board {
+    grid-area: 3/6/4/13;
+  }
+
+  .twitter {
+    grid-area: 2/6/3/10;
+  }
+
+  .favorite {
+    grid-area: 2/10/3/13;
   }
 }
