--- a/style/index.css
+++ b/style/index.css
@@ -357,6 +357,23 @@ iframe {
   margin: var(--spacing-sm) 0 var(--spacing-xs) 0;
 }
 
+/* 공통 푸터 */
+.appFooter {
+  background: var(--primary-color);
+  color: var(--white);
+  padding: var(--spacing-xl);
+  display: flex;
+  flex-flow: column nowrap;
+  gap: var(--spacing-base);
+}
+
+.address {
+  font-style: normal;
+}
+.copyright {
+  font-size: 100%;
+}
+
 /* 모바일 디바이스 */
 @media (min-width: 320px) and (max-width: 767px) {
   /* 모바일 헤더 */
@@ -451,8 +468,15 @@ iframe {
   }
 
   .is--active.menu__list {
-    transform: translateX(0);
+    transform: none;
   }
+
+    /* 모바일 푸터 */
+    .address {
+      display: flex;
+      flex-flow: column nowrap;
+    }
+
 }
 
 /* 데스크탑 디바이스 */
@@ -460,8 +484,8 @@ iframe {
   /* 데스크탑 공통 */
   .appHeader,
   .menu__list,
-  .appMain,
-  .appFooter {
+  .appMain
+   {
     max-width: var(--container-width);
     margin-left: auto;
     margin-right: auto;
@@ -544,5 +568,10 @@ iframe {
   .favorite {
     /* grid-area: 2/10/3/13; */
     grid-area: favorite;
+  }
+
+  /* 데스크탑 푸터 */
+  .appFooter {
+    align-items: center;
   }
 }
